[project]
name = "hero-game"
version = "1.0.0"
description = "Jeu où tu crées un héros avec des attributs générés ou personnalisés."
authors = [
    {name = "FloFLo", email = "FlorianNEEMA@gmail.com"}
]
readme = "README.md"
dependencies = [
    "faker>=18.0.0,<19.0.0",
    "pyxel>=1.9.0,<2.0.0",
]

[tool.poetry]
requires-poetry = ">=2.0"
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pre-commit = "^3.5.0"
djlint = "^1.34.0"
ipython = "^8.18.1"
ruff = "^0.4.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 119
extend-exclude = '''
/(
  | migrations
)/
'''

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "migrations"
]
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203", "E266"]

[tool.ruff.lint.isort]
combine-as-imports = true
