[project]
name = "hero-game"
version = "1.0.0"
description = "Jeu où tu crées un héros avec des attributs générés ou personnalisés."
authors = [
    {name = "FloFLo", email = "FlorianNEEMA@gmail.com"}
]
readme = "README.md"
dependencies = [
    "faker>=18.0.0,<19.0.0",
    "pyxel>=1.9.0,<2.0.0",
]

